--- a/invie2/src/App.css
+++ b/invie2/src/App.css
@@ -9,7 +9,8 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
+    /* animation: fade infinite 1s linear; */
   }
 }
 
@@ -28,11 +29,54 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+} */
+
+.fade {
+ 
+}
+
+.fade-enter{
+  /* background:red; */
+  animation: fade 1s;
+}
+.fade-enter-active{
+  /* transition-duration: 1s; */
+  /* transition-delay: 2s; */
+}
+
+.fade-leave {
+  /* transform: translateY(0px); */
+  animation: fade 1s;
+}
+.fade-leave-active {
+  /* transition-duration: 1s; */
+  /* transform: translateY(500px); */
+}
+
+@keyframes fade {
+  0%{
+    opacity: 0;
+  }
+  25%{
+    opacity: 1;
+  }
+  50%{
+    opacity: 0;
+  }
+  75%{
+    opacity: 1;
+  }
+  90%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
   }
 }
