Modificando CSS de invie

--- a/invie2/src/css/invie.css
+++ b/invie2/src/css/invie.css
@@ -201,30 +201,56 @@ input:focus, textarea:focus {
 
 
 .guitarra {
-  margin: 10px 10px 40px 10px;
-  padding: 10px;
+  margin: 10px 0px 40px ;
+  padding: 10px 2em;
   /*overflow: hidden;*/
   border: 1px solid #1F313C;
-  border-radius: 8px;
+  border-radius: 4px;
+
+  display: flex;
+  align-items: center;
+  min-height: 250px;
+  transition: .3s;
+  position: relative;
+}
+.guitarra-name {
+  font-size: 3em;
+  margin: 0 0 .2em;
+  padding-bottom: .2em;
+  border-bottom: 1.5px dashed #1e313d;
+}
+
+.guitarra:hover {
+  /* box-shadow: x y % color; */
+  box-shadow: 7px 7px  #1e313d;
+}
+.guitarra:nth-of-type(even):hover {
+  box-shadow: -7px 7px  #1e313d;
+}
+.guitarra:nth-of-type(even) {
+  justify-content: flex-end;
+}
+.guitarra:nth-of-type(even) .guitarra-image{
+  right: initial;
+  left: 0;
+}
+.guitarra-image {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 .guitarra ol {
   padding: 0;
-}
-.guitarra.b {
-  height: 190px;
-}
-
-
-.derecha {
-  float: right;
-  position: relative;
-  top: -127px;
+  list-style: none;
+  counter-reset: features;
+  text-align: left;
 }
 
-.izquierda {
-  float: left;
-  position: relative;
+.guitarra li:before {
+  counter-increment: features;
+  content: counter(features) ". ";
 }
+
 
 .contenedor-guitarra-a {
   padding-left: 20px;
