--- a/invie2/src/css/animations.css
+++ b/invie2/src/css/animations.css
@@ -198,3 +198,46 @@
     transform: translateY(-3000px);
   }
 }
+
+
+.like{
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  background-image: url('../images/corazon.png');
+  background-repeat: no-repeat;
+  background-size: 1450px 50px;
+  bottom: -100px;
+  position: fixed;
+}
+
+.like.is-liked {
+  animation-name: like, move;
+  animation-duration: 1.5s, 5s;
+  animation-timing-function: steps(28), linear;
+  /*background-position: -2800p 0;*/
+  /*background-position: right;*/
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite, 1;
+}
+
+@keyframes like {
+  0%{
+      background-position: 0 0;
+  }
+  100%{
+      /*background-position: -2800px 0;*/
+      background-position: right;
+  }
+}
+
+@keyframes move {
+  from {
+    bottom: 0;
+    position: absolute;
+  }
+  to {
+    bottom: 110%;
+    position: absolute;
+  }
+}
